badge date range changes in api call for future expiry badges

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-    background: linear-gradient(to right, #f8d7da, #d1ecf1);
+    /* background: linear-gradient(to right, #ece3e3, #e3eef0); */
+    background-color: #ebebeb;
     min-height: 100vh;
 }
 
